[package]
name = "tinycms"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
aws-config = "1.8.16"
aws-sdk-s3 = "1.132.0"
axum = { version = "0.8.9", features = ["multipart"] }
axum-extra = { version = "0.12.6", features = ["cookie"] }
time = "0.3"
clap = { version = "4", features = ["derive"] }
colored = "3.1.1"
mime_guess = "2.0.5"
rust-embed = "8.11.0"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = [
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
  "chrono",
  "json",
] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
argon2 = { version = "0.5", features = ["std"] }
sha2 = "0.11"
rand = "0.10.1"
reqwest = { version = "0.13.3", features = [
  "json",
  "form",
], default-features = false }
regex = "1"
sqlparser = "0.62"
notify = "8.2.0"
